# 9_AnohovA_fpmi_cpp_labs

semester_1/homeworks/: test1.cpp  test5.cpp
semester_1/lab1_introduction/: .gitignore  CMakeLists.txt  task1.cpp  task11.cpp  task12.cpp  task13.cpp  task3.cpp  task4.cpp  task7.cpp
semester_1/lab2_integer_arithmetics/: CMakeLists.txt  dop_task1.cpp  dop_task2.cpp  task2  task3.cpp
semester_1/lab3_pointers_and_arrays/: .gitignore  CMakeLists.txt  hometask.cpp  lab3_dynamic.cpp  lab3_static.cpp  main.cpp
semester_1/lab4_matrices/: .clang-format  CMakeLists.txt  main.cpp  task.cpp
semester_1/lab5_strings/: CMakeLists.txt  task.cpp
semester_1/lab6_files/: CMakeLists.txt  input.txt  task.cpp
